20250812 리얼 마지막? 업로드