@@ -1,106 +1,96 @@
 package kr.cloud.web.controller;
 
 import java.util.Date;
-import java.util.HashMap;
-import java.util.List;
 import java.util.Map;
+import java.sql.Timestamp;
 
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.format.annotation.DateTimeFormat;
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.http.MediaType; 
 import org.springframework.web.bind.annotation.CrossOrigin;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 import kr.cloud.web.entity.Report;
-import kr.cloud.web.entity.ReportRequest;
-import kr.cloud.web.service.NcpObjectStorageService;
 import kr.cloud.web.service.ReportApiService;
-import java.io.FileOutputStream;
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
+import lombok.RequiredArgsConstructor;
 
-import com.amazonaws.auth.policy.Resource;
-import com.itextpdf.text.Document;
-import com.itextpdf.text.DocumentException;
-import com.itextpdf.text.Element;
-import com.itextpdf.text.Font;
-import com.itextpdf.text.PageSize;
-import com.itextpdf.text.Paragraph;
-import com.itextpdf.text.pdf.PdfWriter;
 
 	// 리포트 콘트롤러 
 //		@CrossOrigin(origins = "http://localhost:3000")
 		@RestController
 		@RequestMapping("/api/reports")
+		@RequiredArgsConstructor
 		public class ReportController {
 
-			@Autowired
-			private ReportApiService reportApiService;
-			
-			// 리포트 생성 요청
-			 @PostMapping("/generate")
-			    public ResponseEntity<Map<String, String>> generateReport(@RequestBody Map<String, Object> request) {
-			        //  파라미터 추출
-			        String periodStart = (String) request.get("period_start");
-			        String periodEnd = (String) request.get("period_end");
-			        String userId = (String) request.get("user_id");
-			        String reportType = (String) request.get("report_type");
-			        boolean useCustomPrompt = (Boolean) request.get("use_custom_prompt");
-			        String customPrompt = (String) request.get("custom_prompt");
-			        String extraNote = (String) request.get("extra_note");
+			private final ReportApiService reportApiService;
+			 // 1) 미리보기: HTML만
+		    @PostMapping("/generate")
+		    public ResponseEntity<Map<String, String>> generateReport(@RequestBody Map<String, Object> req) {
+		        String html = reportApiService.generateReportPreview(
+		                (String)req.get("period_start"),
+		                (String)req.get("period_end"),
+		                (String)req.get("user_id"),
+		                (String)req.get("report_type"),
+		                (Boolean)req.getOrDefault("use_custom_prompt", false),
+		                (String)req.getOrDefault("custom_prompt",""),
+		                (String)req.getOrDefault("extra_note","")
+		            );
+		        return ResponseEntity.ok(Map.of("report_html", html));
+		    }
+			// 2) 저장 버튼: HTML -> PDF 렌더 + 업로드 + DB 저장
+			    @PostMapping("/save")
+			    public ResponseEntity<Map<String, String>> saveReport(@RequestBody Map<String, Object> request) {
+			    	
+			    	try {
+			            String html        = (String) request.get("report_html");
+			            String reportType  = (String) request.get("report_type");
+			            String periodStart = (String) request.getOrDefault("period_start", null);
+			            String userId      = (String) request.getOrDefault("user_id", "unknown");
 
-			        //  핵심 호출
-			        String html = reportApiService.generateReport(
-			        	periodStart, periodEnd, userId, reportType, useCustomPrompt, customPrompt, extraNote);
-			 
-			        // 2. HTML이 비었거나 오류 메시지면 PDF 변환/업로드 중단
-			        if (html == null || html.trim().isEmpty() || html.startsWith("보고서 생성 실패")) {
-			            System.err.println("보고서 HTML 생성 실패, PDF 변환 안 함!");
-			            Map<String, String> errorResult = new HashMap<>();
-			            errorResult.put("error", "보고서 HTML 생성 실패");
-			            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(errorResult);
+			            if (html == null || html.isBlank()) {
+			                return ResponseEntity.badRequest().body(Map.of("error", "report_html is empty"));
+			            }
+
+			            byte[] pdfBytes = reportApiService.renderPdfBytes(html, reportType);
+
+			            String dateStr  = periodStart == null ? "" :
+			                    periodStart.replace(":","").replace("-","").replace(" ","_");
+			            String fileName = "report_" + reportType + (dateStr.isBlank() ? "" : "_" + dateStr) + ".pdf";
+			            String fileUrl  = reportApiService.uploadPdf(pdfBytes, fileName);
+
+			            // DB 저장
+			            Report report = new Report();
+			            report.setReportTitle("보고서_" + reportType + (periodStart != null ? "_" + periodStart : ""));
+			            // TODO: 타입 매핑은 실제 값에 맞게 조정
+			            long typeId = switch (reportType) {
+			            case "accident" -> 1L;
+			            case "entry"    -> 2L;
+			            case "total"    -> 3L;   // 
+			            default         -> 0L;   // 안전망
+			        };
+			            report.setTypeId(typeId);
+			            report.setReportFile(fileUrl);
+			            report.setUserId(userId);
+			            report.setName(userId);
+			            report.setRegDate(new Timestamp(System.currentTimeMillis()));
+			            reportApiService.saveReport(report);
+
+			            
+			            return ResponseEntity.ok(Map.of("pdf_url", fileUrl));
+			        } catch (Exception e) {
+			            return ResponseEntity.status(500).body(Map.of("error", e.getMessage()));
 			        }
-			        
-			     //  PDF 생성 API호출
-			        String fileUrl = reportApiService.generatePdfReportAndUpload(html, reportType, periodStart);
-			       
-
-			        //  Report 객체 생성 및 값 세팅
-			        Report report = new Report();
-			        report.setReportTitle("보고서_" + reportType + "_" + periodStart);  // or 원하는 방식
-			        report.setTypeId(reportType.equals("accident") ? 1L : 2L);  // 타입 매핑 예시
-			        report.setReportFile(fileUrl);   // 오브젝트 스토리지 PDF URL
-			        report.setUserId(userId);     	
-			        report.setRegDate(new Date());   // 생성일
-
-			        // 2 저장
-			        reportApiService.saveReport(report);
-			        
-			     // Map에 담아서 반환
-			        Map<String, String> result = new HashMap<>();
-			        result.put("report_html", html);
-			        result.put("pdf_url", fileUrl); 
-			        
-			        return ResponseEntity.ok(result);
 			    }
-			
-		
-				@PostMapping("/generate-pdf-and-upload")
-				public ResponseEntity<String> generatePdfAndUpload(@RequestBody Map<String, Object> request) {
-				    String html = (String) request.get("report_html");
-				    String reportType = (String) request.get("report_type");
-				    String periodStart = (String) request.get("period_start");
-				    String fileUrl = reportApiService.generatePdfReportAndUpload(html, reportType, periodStart);
-				    return ResponseEntity.ok(fileUrl);
-				}
-				
-}
+
+			    // 3) (옵션) 업로드 없이 PDF 바이트만 반환 — 즉시 다운로드/뷰어용
+			    @PostMapping(value = "/preview-pdf", produces = MediaType.APPLICATION_PDF_VALUE)
+			    public ResponseEntity<byte[]> previewPdf(@RequestBody Map<String, Object> request) {
+			        String html       = (String) request.get("report_html");
+			        String reportType = (String) request.get("report_type");
+			        byte[] pdfBytes   = reportApiService.renderPdfBytes(html, reportType);
+			        return ResponseEntity.ok()
+			                .header("Content-Disposition", "attachment; filename=report_preview.pdf")
+			                .body(pdfBytes);
+			    }
+			}
